--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
-{% if page.author_profile or layout.author_profile or page.sidebar %}
-  <div class="sidebar sticky">
-  {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
+#{% if page.author_profile or layout.author_profile or page.sidebar %}
+#  <div class="sidebar sticky">
+  {% if page.author_profile or layout.author_profile %}{% endif %}#{% include author-profile.html %}
   {% if page.sidebar %}
     {% for s in page.sidebar %}
       {% if s.image %}
@@ -20,5 +20,9 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
-  </div>
-{% endif %}
+#  </div>
+#{% endif %}
+
+
+
+
