--- a/_sass/minimal-mistakes/_reset.scss
+++ b/_sass/minimal-mistakes/_reset.scss
@@ -9,21 +9,21 @@ html {
   box-sizing: border-box;
   background-color: $background-color;
   font-size: 12px;	
-  /* font-size: 16px;
+  /* font-size: 16px; */
 	
   @include breakpoint($medium) {
     font-size: 14px;
-  /* font-size: 18px;
+  /* font-size: 18px; */
   }
 
   @include breakpoint($large) {
     font-size: 14px;
-  /* font-size: 20px;
+  /* font-size: 20px; */
   }
 
   @include breakpoint($x-large) {
     font-size: 16px;
-  /* font-size: 22px;
+  /* font-size: 22px; */
   }
 
   -webkit-text-size-adjust: 100%;
